--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-django
-pillow
+asgiref==3.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==5.0.4
+idna==3.7
+pillow==10.3.0
+requests==2.31.0
+six==1.16.0
+sqlparse==0.5.0
+tzdata==2024.1
+urllib3==2.2.1
